linkerd/prevent-linkerd-pod-injection-override/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    linkerd.io/inject: enabled
  name: goodpod01
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox
      resources: {}
